Feat(#17): 채팅 메시지 api에 nickname도 포함되도록 수정
